--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,9 @@
-@import './layout/_nav.css';
-@import './layout/_galeria.css';
+@import './layout/nav.css';
+@import './layout/galeria.css';
 @import './core/animation.css';
-@import './layout/_pitch.css';
-@import './core/_index.css';
-@import './layout/_expl.css';
+@import './layout/pitch.css';
+@import './core/index.css';
+@import './layout/expl.css';
 
 
 *{
