--- a/css/layout/pitch.css
+++ b/css/layout/pitch.css
@@ -2,3 +2,11 @@
     position: relative;
     top: 200px;
 }
+
+@media (max-width: 800px) {
+    .video{
+        top: 200px;
+        width: 100%;
+        height: 100%;
+    }
+}
